testing/errors/valuenotdefined7.a
undef=*	; -> "Symbol not defined(*)."
	*=$1000	
